<resources>
    <string name="app_name">Yuedu</string>
    <!--Splash Activity-->
    <string name="start">开启悦读</string>
    <string name="title_activity_digest">DigestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!--Main activity-->
    <string name="refresh">刷新</string>
    <string name="no_network_read_cache">无可用网络，读取本地已缓存的新闻</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="fetch_news_digest_failed">"获取新闻失败..."</string>
    <string name="fetch_news_ing">"正在获取更多新闻..."</string>
    <string name="fetch_latest_news_ing">"正在获取最新新闻..."</string>
    <string name="yuedu">"悦读"</string>

    <!--Setting Fragment-->
    <string name="favorite">收藏</string>
    <string name="night_mode">夜间</string>
    <string name="offline">离线</string>
    <string name="setting">设置</string>
    <string name="automatic_cache">定时下载</string>
    <string name="title_activity_offline_download">OfflineDownloadActivity</string>
    <string name="downloading">正在下载 </string>

    <!--Offline Cache Activity-->
    <string name="offline_label">离线缓存</string>
    <string name="cache_button_text_on">停止缓存</string>
    <string name="cache_button_text_off">启动缓存</string>
    <string name="cache_setting">缓存设置</string>
    <string name="cache_images">缓存图片</string>
    <string name="all_channels">全部频道</string>
    <string name="cache_type_digest">摘要</string>
    <string name="cache_type_detail">正文</string>
    <string name="cache_type_image">图片</string>
    <string name="cache_progress">正在下载%s频道</string>
    <string name="cache_progress_finished">下载结束</string>
    <string name="cache_status_downloading">正在下载</string>
    <string name="cache_status_paused">暂停下载</string>
    <string name="select_all_text_on">取消全选</string>
    <string name="select_all_text_off">全部选择</string>
    <string name="cache_progress_last_cache_time">上次缓存</string>
    <string name="cache_clear">清空缓存</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--Icon image selector view-->
    <string name="selected">使用</string>
    <string name="pictures">选择头像</string>

    <!--Image viewer activity-->
    <string name="loading">正在载入</string>
</resources>
