<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.redoc.yuedu.setting.view.OfflineCacheActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_height="@dimen/app_bar_height"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back"
                android:background="@color/transparent"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/offline_label"
                android:textSize="@dimen/large_size_text"
                android:textColor="@color/white"/>
        </LinearLayout>
        <ToggleButton
            android:id="@+id/startStopCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:textOn="@string/cache_button_text_on"
            android:textOff="@string/cache_button_text_off"/>

        <TextView
            android:id="@+id/cachedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/media_size_text"
            android:text="0"></TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/media_size_text"
                android:text="@string/cache_images"
                android:textColor="@color/white"/>
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView"
                android:checked="false" />
        </RelativeLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/cache"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/all_channels"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_margin"
        android:layout_height="match_parent"/>

</LinearLayout>
