<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/wide_app_action_bar_height"
        android:background="@color/mainColor"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/setting"
            android:textSize="@dimen/large_size_text"
            android:textColor="@color/white"/>
        <ImageButton
            android:id="@+id/user_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_round_head"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">
        <!--设置-->
        <RelativeLayout
            android:id="@+id/setting_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/media_size_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/large_size_text"
                android:layout_alignParentRight="true"
                android:src="@drawable/enter"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
        <!--离线-->
        <RelativeLayout
            android:id="@+id/offline_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/offLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline"
                android:textSize="@dimen/media_size_text"/>
            <ImageView
                android:id="@+id/enterOffline"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/large_size_text"
                android:layout_alignParentRight="true"
                android:src="@drawable/enter"/>
            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@id/offLineText"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
        <!--收藏-->
        <RelativeLayout
            android:id="@+id/favorite_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textSize="@dimen/media_size_text"
                android:textColor="@color/darkGray"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/large_size_text"
                android:layout_alignParentRight="true"
                android:src="@drawable/enter"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>